@@ -3,6 +3,7 @@ use = egg:tutorial
 reload_templates = true
 debug_authorization = false
 debug_notfound = false
+debug_matched = false
 zodb_uri = file://%(here)s/Data.fs?connection_cache_size=20000
 
 [pipeline:main]
