@@ -4,6 +4,7 @@ reload_templates = true
 mako.directories = {{package}}:templates
 debug_authorization = false
 debug_notfound = false
+debug_matched = false
 debug_templates = true
 default_locale_name = en
 session.type = file
