@@ -24,6 +24,7 @@ class TestSettings(unittest.TestCase):
         settings = self._makeOne()
         self.assertEqual(settings['debug_authorization'], False)
         self.assertEqual(settings['debug_notfound'], False)
+        self.assertEqual(settings['debug_matched'], False)
         self.assertEqual(settings['reload_templates'], False)
         self.assertEqual(settings['reload_resources'], False)
         self.assertEqual(settings['configure_zcml'], '')
@@ -109,6 +110,21 @@ class TestSettings(unittest.TestCase):
                              {'BFG_DEBUG_NOTFOUND':'1'})
         self.assertEqual(result['debug_notfound'], True)
 
+    def test_debug_matched(self):
+        result = self._makeOne({})
+        self.assertEqual(result['debug_matched'], False)
+        result = self._makeOne({'debug_matched':'false'})
+        self.assertEqual(result['debug_matched'], False)
+        result = self._makeOne({'debug_matched':'t'})
+        self.assertEqual(result['debug_matched'], True)
+        result = self._makeOne({'debug_matched':'1'})
+        self.assertEqual(result['debug_matched'], True)
+        result = self._makeOne({}, {'BFG_DEBUG_MATCHED':'1'})
+        self.assertEqual(result['debug_matched'], True)
+        result = self._makeOne({'debug_matched':'false'},
+                             {'BFG_DEBUG_MATCHED':'1'})
+        self.assertEqual(result['debug_matched'], True)
+
     def test_debug_templates(self):
         result = self._makeOne({})
         self.assertEqual(result['debug_templates'], False)
@@ -127,27 +143,33 @@ class TestSettings(unittest.TestCase):
     def test_debug_all(self):
         result = self._makeOne({})
         self.assertEqual(result['debug_notfound'], False)
+        self.assertEqual(result['debug_matched'], False)
         self.assertEqual(result['debug_authorization'], False)
         self.assertEqual(result['debug_templates'], False)
         result = self._makeOne({'debug_all':'false'})
         self.assertEqual(result['debug_notfound'], False)
+        self.assertEqual(result['debug_matched'], False)
         self.assertEqual(result['debug_authorization'], False)
         self.assertEqual(result['debug_templates'], False)
         result = self._makeOne({'debug_all':'t'})
         self.assertEqual(result['debug_notfound'], True)
+        self.assertEqual(result['debug_matched'], True)
         self.assertEqual(result['debug_authorization'], True)
         self.assertEqual(result['debug_templates'], True)
         result = self._makeOne({'debug_all':'1'})
         self.assertEqual(result['debug_notfound'], True)
+        self.assertEqual(result['debug_matched'], True)
         self.assertEqual(result['debug_authorization'], True)
         self.assertEqual(result['debug_templates'], True)
         result = self._makeOne({}, {'BFG_DEBUG_ALL':'1'})
         self.assertEqual(result['debug_notfound'], True)
+        self.assertEqual(result['debug_matched'], True)
         self.assertEqual(result['debug_authorization'], True)
         self.assertEqual(result['debug_templates'], True)
         result = self._makeOne({'debug_all':'false'},
                              {'BFG_DEBUG_ALL':'1'})
         self.assertEqual(result['debug_notfound'], True)
+        self.assertEqual(result['debug_matched'], True)
         self.assertEqual(result['debug_authorization'], True)
         self.assertEqual(result['debug_templates'], True)
 
